<resources>
    <string name="app_name">PlanIT</string>
    <string name="AddEvent">ADD EVENT</string>
    <string name="ViewEvent">VIEW EVENT</string>
    <string name="EditEvent">EDIT EVENT</string>
    <string name="DeleteEvent">DELETE EVENT</string>
    <string name="Return">RETURN</string>
    <string name="y2026">2026</string>
    <string name="mJanuary">January</string>
    <string name="mFebruary">February</string>
    <string name="mMarch">March</string>
    <string name="mApril">April</string>
    <string name="mMay">May</string>
    <string name="mJune">June</string>
    <string name="mJuly">July</string>
    <string name="mAugust">August</string>
    <string name="mSeptember">September</string>
    <string name="mOctober">October</string>
    <string name="mNovember">November</string>
    <string name="mDecember">December</string>
    <string name="Sunday">Sun</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tues</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thurs</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="d1">1</string>
    <string name="d2">2</string>
    <string name="d3">3</string>
    <string name="d4">4</string>
    <string name="d5">5</string>
    <string name="d6">6</string>
    <string name="d7">7</string>
    <string name="d8">8</string>
    <string name="d9">9</string>
    <string name="d10">10</string>
    <string name="d11">11</string>
    <string name="d12">12</string>
    <string name="d13">13</string>
    <string name="d14">14</string>
    <string name="d15">15</string>
    <string name="d16">16</string>
    <string name="d17">17</string>
    <string name="d18">18</string>
    <string name="d19">19</string>
    <string name="d20">20</string>
    <string name="d21">21</string>
    <string name="d22">22</string>
    <string name="d23">23</string>
    <string name="d24">24</string>
    <string name="d25">25</string>
    <string name="d26">26</string>
    <string name="d27">27</string>
    <string name="d28">28</string>
    <string name="d29">29</string>
    <string name="d30">30</string>
    <string name="d31">31</string>
    <string name="btnAddEvent">Add Event</string>
    <string name="btnViewEvents">View Events</string>
    <string name="btnEditEvents">Edit Events</string>
    <string name="btnDelEvents">Delete Event</string>

</resources>