<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/mainbg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/applogoplain"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/michroma"
            android:textSize="25sp"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/y2026"
            android:fontFamily="serif"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="end"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30sp"
        android:text="@string/mJuly"
        android:textSize="40sp"
        android:fontFamily="serif"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView android:layout_width="50dp" android:layout_height="wrap_content" android:layout_marginEnd="5sp" android:text="@string/Sunday" android:textSize="20sp" android:gravity="center" android:layout_weight="1"/>
        <TextView android:layout_width="50dp" android:layout_height="wrap_content" android:layout_marginEnd="5sp" android:text="@string/Monday" android:textSize="20sp" android:gravity="center" android:layout_weight="1"/>
        <TextView android:layout_width="50dp" android:layout_height="wrap_content" android:layout_marginEnd="5sp" android:text="@string/Tuesday" android:textSize="20sp" android:gravity="center" android:layout_weight="1"/>
        <TextView android:layout_width="50dp" android:layout_height="wrap_content" android:text="@string/Wednesday" android:textSize="20sp" android:gravity="center" android:layout_weight="1"/>
        <TextView android:layout_width="50dp" android:layout_height="wrap_content" android:layout_marginStart="5sp" android:text="@string/Thursday" android:textSize="20sp" android:gravity="center" android:layout_weight="1"/>
        <TextView android:layout_width="50dp" android:layout_height="wrap_content" android:layout_marginStart="5sp" android:text="@string/Friday" android:textSize="20sp" android:gravity="center" android:layout_weight="1"/>
        <TextView android:layout_width="50dp" android:layout_height="wrap_content" android:text="@string/Saturday" android:textSize="20sp" android:gravity="center" android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <TextView android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <TextView android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
        <Button android:id="@+id/july1btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d1" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july2btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d2" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july3btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d3" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july4btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d4" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/july5btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d5" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july6btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d6" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july7btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d7" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july8btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d8" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july9btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d9" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july10btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d10" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july11btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d11" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/july12btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d12" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july13btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d13" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july14btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d14" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july15btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d15" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july16btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d16" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july17btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d17" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july18btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d18" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/july19btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d19" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july20btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d20" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july21btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d21" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july22btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d22" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july23btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d23" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july24btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d24" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july25btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d25" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/july26btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d26" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july27btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d27" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july28btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d28" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july29btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d29" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july30btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d30" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <Button android:id="@+id/july31btn" android:layout_width="0dp" android:layout_height="70dp" android:layout_weight="1" android:text="@string/d31" android:background="?android:attr/selectableItemBackground" android:textColor="@color/black"/>
        <TextView android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCalendarEvents"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="#6B513E"
            android:fontFamily="@font/poppins_medium"
            android:text="CALENDAR EVENTS"
            android:textColor="#ffffff"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        <Button
            android:id="@+id/btnToAugustLayout"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"
            android:backgroundTint="#6B513E"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/nextPageIcon"
            android:textColor="#ffffff"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </LinearLayout>
</LinearLayout>