<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addViewEditDelete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddViewEditDelete"
    android:background="@drawable/mainbg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/applogoplain"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/michroma"
            android:textSize="25sp"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/y2026"
            android:fontFamily="serif"
            android:textSize="35sp"
            android:layout_gravity="bottom"
            android:gravity="end"/>
    </LinearLayout>

    <TextView
        android:id="@+id/selectedDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30sp"
        android:text="month day"
        android:textSize="40sp"
        android:fontFamily="serif"
        android:gravity="center"/>
    <Button
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:text="@string/AddEvent"
        android:textSize="40sp"
        android:fontFamily="sans-serif-black"
        app:cornerRadius="12dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        style="@style/Widget.MaterialComponents.Button.Icon"/>
    <Button
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:text="@string/ViewEvent"
        android:textSize="40sp"
        android:fontFamily="sans-serif-black"
        app:cornerRadius="12dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        style="@style/Widget.MaterialComponents.Button.Icon"/>
    <Button
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:text="@string/EditEvent"
        android:textSize="40sp"
        android:fontFamily="sans-serif-black"
        app:cornerRadius="12dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        style="@style/Widget.MaterialComponents.Button.Icon"/>
    <Button
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:text="@string/DeleteEvent"
        android:textSize="40sp"
        android:fontFamily="sans-serif-black"
        app:cornerRadius="12dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        style="@style/Widget.MaterialComponents.Button.Icon"/>
    <Button
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:text="@string/Return"
        android:textSize="40sp"
        android:fontFamily="sans-serif-black"
        app:cornerRadius="12dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        style="@style/Widget.MaterialComponents.Button.Icon"/>

</LinearLayout>